--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -18,5 +18,6 @@
     <footer>
         <p>© 2025 Your Name</p>
     </footer>
+    <script src="main.js"></script>
 </body>
 </html>
